add desktop and mobile styles

--- a/src/styles/common/colors.css
+++ b/src/styles/common/colors.css
@@ -4,7 +4,10 @@
     --color-gray-1: #A4A4A4;
     --color-gray-2: #878787;
     --color-gray-3: #575A84;
-    --color-disabled: #DEDEDE;
+    --color-disabled-1: #DEDEDE;
+    --color-disabled-2: #F2F3F5;
     --color-green: #6AD400;
+    --color-green-light: #CEFF9D;
     --color-red: #FF2F2F;
+    --color-red-light: #FFB8B8;
 }
