--- a/src/styles/common/common.css
+++ b/src/styles/common/common.css
@@ -145,7 +145,7 @@ h1 {
 }
 
 h5 {
-    font-size: 20;
+    font-size: 20px;
     line-height: 1;
     font-weight: 700;
 }
@@ -168,15 +168,19 @@ input {
 button {
     padding: 0;
     background-color: var(--color-white);
+    cursor: pointer;
 }
 
-.btn,
-.btn1,
-.btn2 {
-    padding: 10px 15px;
-    border-radius: 10px;
-}
+@media(max-width: 768px) {
+    h1 {
+        font-size: 24px;
+    }
 
-.btn {
+    h5 {
+        font-size: 16px;
+    }
 
+    .container {
+        padding: 0 16px;
+    }
 }
