add redux and slices

--- a/src/styles/common/colors.css
+++ b/src/styles/common/colors.css
@@ -6,6 +6,7 @@
     --color-gray-3: #575A84;
     --color-disabled-1: #DEDEDE;
     --color-disabled-2: #F2F3F5;
+    --color-blue: #0013FF;
     --color-green: #6AD400;
     --color-green-light: #CEFF9D;
     --color-red: #FF2F2F;
