--- a/src/styles/common/common.css
+++ b/src/styles/common/common.css
@@ -160,9 +160,15 @@ h5 {
     position: relative;
 }
 
-input {
+input,
+input:focus-visible,
+input:focus {
     border: 0;
     border-bottom: 1px solid var(--color-gray-2);
+    font-size: 16px;
+    line-height: 1;
+    outline: none;
+    caret-color: var(--color-black);
 }
 
 button {
@@ -182,5 +188,11 @@ button {
 
     .container {
         padding: 0 16px;
+    }
+
+    input,
+    input:focus-visible,
+    input:focus {
+        font-size: 14px;
     }
 }
